--- a/widgets/resources/index.html
+++ b/widgets/resources/index.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recursos</title>
+    <title>Projetos</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <header class="header">
-        <a href="https://www.notion.so/Resources-73f25927e29c40a2a3442000bb6cacc4" target="_blank">
-            <img src="assets/resource-ico.gif" alt="GIF de Pixel Earth">
-            <h1>Resources</h1>
+        <a href="https://www.notion.so/Projects-9c478e7b659944c7ace3385d787567cc" target="_blank">
+            <img src="assets/resource-ico.gif" alt="GIF de Hacker">
+            <h1>Projects</h1>
         </a>
     </header>
 </body>
