--- a/widgets/projects/index.html
+++ b/widgets/projects/index.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projetos</title>
+    <title>Projects</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <header class="header">
-        <a href="https://www.notion.so/Projects-9c478e7b659944c7ace3385d787567cc" target="_blank">
-            <img src="assets/project-ico.gif" alt="GIF de Hacker">
+        <a href="javascript:void(0)" onclick="redirectToProject()">
+            <img src="assets/project-ico.gif" alt="project-ico">
             <h1>Projects</h1>
         </a>
     </header>
+    <script src="scripts.js"></script>
 </body>
 
 </html>
