Remove unnecessary JavaScript and update HTML content
- Removed `redirectToProject` function from `script.js`.
- Updated `index.html` in `projects` and `resources` to remove unnecessary anchor tags.
- Changed language attribute in `resources/index.html` from `pt-BR` to `en`.
- Updated title and alt text in `resources/index.html`.
- Adjusted CSS in `resources/styles.css` to modify padding and overflow.

--- a/widgets/resources/index.html
+++ b/widgets/resources/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projetos</title>
+    <title>Resources</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <header class="header">
-        <a href="https://www.notion.so/Projects-9c478e7b659944c7ace3385d787567cc" target="_blank">
-            <img src="assets/resource-ico.gif" alt="GIF de Hacker">
-            <h1>Projects</h1>
+        <img src="assets/resource-ico.gif" alt="resource-ico">
+        <h1>Resources</h1>
         </a>
     </header>
+    <script src="scripts.js"></script>
 </body>
 
 </html>
