Refactor HTML and CSS structure for project and resource widgets
- Wrapped header elements in a container div for both projects and resources HTML files.
- Updated CSS to include a container class with width, height, and border properties.
- Applied box-sizing to ensure padding and borders are included in the element's total width and height.
- Adjusted header styling for better alignment and spacing within the container.
- Ensured responsive design adjustments for images and header elements.

--- a/widgets/projects/index.html
+++ b/widgets/projects/index.html
@@ -9,12 +9,12 @@
 </head>
 
 <body>
-    <header class="header">
-        <img src="assets/project-ico.gif" alt="project-ico">
-        <h1>Projects</h1>
-        </a>
-    </header>
-    <script src="scripts.js"></script>
+    <div class="container">
+        <header class="header">
+            <img src="assets/project-ico.gif" alt="project-ico">
+            <h1>Projects</h1>
+        </header>
+    </div>
 </body>
 
 </html>
