--- a/widgets/resources/index.html
+++ b/widgets/resources/index.html
@@ -9,12 +9,12 @@
 </head>
 
 <body>
-    <header class="header">
-        <img src="assets/resource-ico.gif" alt="resource-ico">
-        <h1>Resources</h1>
-        </a>
-    </header>
-    <script src="scripts.js"></script>
+    <div class="container">
+        <header class="header">
+            <img src="assets/resource-ico.gif" alt="resource-ico">
+            <h1>Resources</h1>
+        </header>
+    </div>
 </body>
 
 </html>
