--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,6 +15,7 @@
             text-align: center;
             padding: 50px;
         }
+
         .widget-link {
             margin: 10px;
             padding: 10px;
@@ -23,12 +25,14 @@
             text-align: center;
             width: 200px;
         }
+
         .widget-link a {
             text-decoration: none;
             color: #00ff00;
         }
     </style>
 </head>
+
 <body>
     <h1>My Custom Notion Widgets</h1>
     <div class="widget-link">
@@ -37,5 +41,12 @@
     <div class="widget-link">
         <a href="widgets/projects/index.html" target="_blank">Projects</a>
     </div>
+    <div class="widget-link">
+        <a href="widgets/areas/index.html" target="_blank">Areas</a>
+    </div>
+    <div class="widget-link">
+        <a href="widgets/archive/index.html" target="_blank">Archive</a>
+    </div>
 </body>
+
 </html>
