--- a/index.html
+++ b/index.html
@@ -47,6 +47,16 @@
     <div class="widget-link">
         <a href="widgets/archive/index.html" target="_blank">Archive</a>
     </div>
+
+    <div class="widget-link">
+        <a href="widgets/ideas/index.html" target="_blank">Ideas</a>
+    </div>
+    <div class="widget-link">
+        <a href="widgets/notes/index.html" target="_blank">Notes</a>
+    </div>
+    <div class="widget-link">
+        <a href="widgets/links/index.html" target="_blank">Links</a>
+    </div>
 </body>
 
 </html>
